<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ime_name" translatable="false">LeanKeyboard</string>
    <string name="ime_service_name" translatable="false">LeanKeyboard</string>
    <string name="word_separators">" .,;:!?
        ()[]*&amp;@{}/&lt;>_+=|"
    </string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="label_search_key">Search</string>
    <string name="label_done_key">Done</string>
    <string name="settings_title">Keyboard Options</string>
    <string name="title_movement_sensitivity">Movement sensitivity</string>
    <string name="btn_on">On</string>
    <string name="btn_off">Off</string>
    <string name="subtype_generic">%s</string>
    <string name="keyboardview_keycode_space">Space</string>
    <string name="keyboardview_keycode_delete">Delete</string>
    <string name="keyboardview_keycode_mode_change">Mode change</string>
    <string name="keyboardview_keycode_shift">Shift</string>
    <string name="keyboardview_keycode_lang">Language</string>
    <string name="keyboardview_keycode_caps">Caps Lock</string>
    <string name="keyboardview_keycode_left">Left</string>
    <string name="keyboardview_keycode_right">Right</string>
    <string name="keyboardview_keycode_voice">Voice Input</string>
    <string name="keyboard_headset_required_to_hear_password">Plug in a headset to hear password keys spoken.</string>
    <string name="keyboard_password_character_no_headset">Dot.</string>
    <string name="language_dialog_title">Select additional layouts</string>
    <string name="language_dialog_subtitle">To open dialog next time, long press on \'world\' button</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email</string>
    <string name="kb_layout_desc">Keyboard Layout</string>
    <string name="kb_layout">Layout</string>
    <string name="kb_settings">Settings</string>
    <string name="kb_settings_desc">Keyboard Settings</string>
    <string name="activate_keyboard">Activate Keyboard</string>
    <string name="change_layout">Change Layout</string>
    <string name="enable_kb_in_system_prefs">You need to enable %s in System Preferences</string>
    <string name="about">About</string>
    <string name="about_desc">About Application</string>
    <string name="keep_on_screen_desc">Keep it on screen while physical keyboard is active</string>
    <string name="misc">Misc</string>
    <string name="misc_desc">Misc Settings</string>
    <string name="keep_on_screen">Keep on Screen</string>
    <string name="keyboardview_keycode_clipboard">Clipboard</string>
    <string name="increase_kbd_size">Enlarge keyboard</string>
    <string name="increase_kbd_size_desc">Increase keyboard size</string>
    <string name="kbd_activation_error2">Error occurred. Try to activate %s with commands below.\n\n%s\n\n%s</string>
    <string name="about_donate">Donate</string>
    <string name="about_web_site">Web Site</string>
    <string name="kbd_activation_error">Can\'t open system kbd settings.\nRedirecting to site with manual instructions…</string>
    <string name="about_issue">Submit an issue</string>
    <string name="about_releases">Get a new version</string>
    <string name="kb_theme">Theme</string>
    <string name="kb_theme_desc">Keyboard Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="enable_suggestions">Enable suggestions</string>
    <string name="enable_suggestions_desc">Enable suggestions row</string>
    <string name="show_launcher_icon">Show icon</string>
    <string name="show_launcher_icon_desc">Show launcher icon</string>
    <string name="enable_cyclic_navigation">Сyclic navigation</string>
    <string name="enable_cyclic_navigation_desc">Сyclic navigation through keyboard (up and down)</string>
    <string name="kb_size">Size</string>
    <string name="kb_size_desc">Keyboard Size</string>
    <string name="change_size">Change Size</string>
    <string name="enable_next_word">Next word suggestions</string>
    <string name="enable_next_word_desc">Predict the next word while typing</string>
    <string name="enable_voice_search">Voice search</string>
    <string name="enable_voice_search_desc">Show a microphone above the keyboard</string>
    <string name="keyboardview_keycode_copy">Copy</string>
    <string name="keyboardview_keycode_cut">Cut</string>
    <string name="keyboardview_keycode_select_all">Select all</string>
    <string name="keyboardview_keycode_select_line">Select line</string>
    <string name="keyboardview_keycode_back">Back</string>
    <string name="msg_copied">Copied to clipboard</string>
    <string name="msg_nothing_selected">Nothing selected</string>
    <string name="voice_settings">Voice</string>
    <string name="voice_settings_desc">Offline voice recognition</string>
    <string name="voice_unsupported">Offline recognition is not supported on this device</string>
    <string name="change_voice">Voice Input</string>
    <string name="enable_offline_voice">Offline recognition</string>
    <string name="enable_offline_voice_desc">Recognize speech on the device, no other app needed</string>
    <string name="download_voice_model">Download model</string>
    <string name="delete_voice_model">Delete model</string>
    <string name="voice_model_item" translatable="false">%1$s (%2$d MB)</string>
    <string name="voice_model_download_started">Downloading the voice model, about %1$d MB</string>
    <string name="voice_model_downloading">Downloading the voice model: %1$d%%</string>
    <string name="voice_model_ready">Voice model is ready</string>
    <string name="voice_model_ready_press_mic">Voice model is ready, press the microphone again</string>
    <string name="voice_no_engine">No voice engine available. Enable offline recognition in Settings &gt; Voice Input.</string>
    <string name="voice_device_too_slow">This device is too slow for offline recognition, so it has been turned off. Install FUTO Voice Input to use the microphone.</string>
    <string name="voice_model_failed">Voice model download failed: %1$s</string>
    <string name="voice_model_deleted">Voice model deleted</string>
    <string name="voice_model_missing">No voice model to delete</string>
</resources>
